# airbnb_clone_test

./: .gitignore  .prettierrc  README.md  nx.json  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vercel.json
apps/backend/: .gitignore  README.md  env.example  guide_line.md  main.py  project.json  pyproject.toml  requirements.txt  vercel.json
apps/backend/fixtures/: README.md  check_refactoring_progress.py  complete_refactoring.py  extract_reviews.py  final_report.py  fix_datetime_formats.py  generate_property_reviews.py  run_all_tests.py  run_tests.py  test_api_comprehensive.py  test_auth_api.py  test_performance.py  test_property_api.py  test_services.py  verify_api_refactor.py  verify_refactoring.py  verify_routes.py
apps/backend/src/api/: __init__.py
apps/backend/src/api/routes/: __init__.py  auth.py  bookings.py  calendar.py  geo.py  houses.py  messages.py  notifications.py  payments.py  reviews.py  (+3 more)
apps/backend/src/auth/: dependencies.py  jwt.py
apps/backend/src/config/: settings.py
apps/backend/src/middleware/: error_handler.py  rate_limiter.py
apps/backend/src/models/: booking.py  review.py  user.py
apps/backend/src/schemas/: auth_schemas.py  booking.py  booking_frontend.py  features.py  house.py  review.py  room.py  user.py
apps/backend/src/services/: __init__.py  auth_service.py  base_service.py  booking_service.py  communication_service.py  geolocation.py  payment_service.py  property_service.py  review_service.py  room_service.py  user_service.py
apps/backend/src/utils/: cache.py  data_manager.py
(+173 files in other folders)
